--- a/Day_53/layouts_next.js/package.json
+++ b/Day_53/layouts_next.js/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "layouts_next.js",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "next": "16.1.4",
-    "next-auth": "^4.24.13",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
